fix addr overflow for mobiles

--- a/fluffzone/static/CSS/posts.css
+++ b/fluffzone/static/CSS/posts.css
@@ -21,5 +21,6 @@ body{
 @media all and (max-width:600px){
     .adoption-block, .blog-block{
         width: 90%;
+        word-break: break-word;
     }
 }
